Compiler/tests/typing/bad/testfile-mut-1.rs
fn main() { let x = 41; x = 42; }
